--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="icon" href="" type="img/png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="fonts/PeaceSans/stylesheet.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="fonts/stylesheet.css" />
     <title> The Forester-Creative Multi Propose Template </title>
 </head>
 
@@ -20,9 +24,7 @@
                 <div class="col-md-5">
                     <ul class="p-0 menu">
                         <li class="d-inline px-1 ">HOME</li>
-                        <li class="d-inline px-1 ">
-                            <a href="#" class="dropdown"></a> SERVICES
-                        </li>
+                        <li class="d-inline px-1 "> <a href="#" class="dropdown-toggle">SERVICES</a> </li>
                         <li class="d-inline px-1 ">GALLERY</li>
                         <li class="d-inline px-1 ">TEAM</li>
                         <li class="d-inline px-1 ">CONTACT</li>
@@ -30,10 +32,7 @@
                     </ul>
                 </div>
                 <div class="col-md-2">
-                    <div class="brand-logo">
-                        <img src="images/logo-dark.png" alt="">
-
-                    </div>
+                    <div class="brand-logo"> <img src="images/logo-dark.png" alt=""> </div>
                 </div>
                 <div class="col-md-5">
                     <ul class="p-0 menu">
@@ -52,16 +51,67 @@
         <div class="hero-content">
             <div class="container pr5 pl5">
                 <div class="col-md-8 text-center m-auto white ">
-                    <h5 class="hero-subheading">
+                    <h5 class="hero-subheading text-white">
                         GREETING, WE ARE
                     </h5>
                     <h1 class="h1-lg mb10">FORESTER</h1>
-                    <h5 class="h5-md mb20">Unordinary digital agency crafting sophisticated and<br>
+                    <h5 class="h5-md mb20 text-white">Unordinary digital agency crafting sophisticated and<br>
                         eccentric stuff that will leave you speechless
-                    </h5>
-                    <a href="#" class="btn btn-scroll btn-hero">EXPLORE NOW</a>
+                    </h5> <a href="#" class="btn btn-scroll btn-hero">EXPLORE NOW</a> </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid py-5">
+        <div class="container text-center justify-content-center py-5">
+            <h5 class="py-2">OUR STORY
+            </h5>
+            <p class="story-text py-2">Unordinary digital agency crafting sophisticated and eccentric stuff that will leave you speechless, we had opportunity to work on wide variety of projects for different clients around the world, we're responsible and our client is our priority </p> <span class="link">Interested in our story and want to meet us even better? <a href="#" class="A">Read More</a></span> </div>
+    </section>
+    <section class="container-fluid py-5 bgcol">
+        <div class="container text-center">
+            <h5>OUR EXPERTISE </h5>
+            <h2 class="h2-md">Services </h2>
+            <div class="row py-5">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card">
+                        <div class="card-image bgC1">
+                         <span class="icon-png"><i class="fas fa-fingerprint"></i>
+                        </span> </div>
+                        <div class="card-body text-center">
+                            <h3 class="h3-md mb5">Web Design</h3>
+                            <p class="h5-sm">Her companions instrument set
+                                <br> estimating sen remarkably solicitude motionless, property men calibrate </p>
+                        </div>
+                        <div class="card-link pb-4"> <a href="#" class="card-a">... DISCOVER MORE</a> </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card">
+                        <div class="card-image bgC1">
+                        <i class="fas fa-camera-retro"></i>
+                        </div>        
+                        <div class="card-body text-center">
+                            <h3 class="h3-md mb5">Photography</h3>
+                            <p class="h5-sm">Her companions instrument set
+                                <br> estimating sen remarkably solicitude motionless, property men calibrate </p>
+                        </div>
+                        <div class="card-link pb-4"> <a href="#" class="card-a">... DISCOVER MORE</a> </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card">
+                        <div class="card-image bgC1"><i class="fas fa-swatchbook"></i></div>
+                        <div class="card-body text-center">
+                            <h3 class="h3-md mb5">Branding</h3>
+                            <p class="h5-sm">Her companions instrument set
+                                <br> estimating sen remarkably solicitude motionless, property men calibrate </p>
+                        </div>
+                        <div class="card-link pb-4"> <a href="#" class="card-a">... DISCOVER MORE</a> </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-</body></html>
+</body>
+
+</html>
