--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="icon" href="" type="img/png" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -74,9 +74,9 @@
             <div class="row py-5">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card">
-                        <div class="card-image bgC1">
-                         <span class="icon-png"><i class="fas fa-fingerprint"></i>
-                        </span> </div>
+                        <div class="card-image bgC1 ">
+                            <div class="fontaw"> <i class="fas fa-swatchbook"></i></div>
+                        </div>
                         <div class="card-body text-center">
                             <h3 class="h3-md mb5">Web Design</h3>
                             <p class="h5-sm">Her companions instrument set
@@ -88,8 +88,8 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card">
                         <div class="card-image bgC1">
-                        <i class="fas fa-camera-retro"></i>
-                        </div>        
+                            <div class="fontaw"><i class="fas fa-camera-retro"></i> </div>
+                        </div>
                         <div class="card-body text-center">
                             <h3 class="h3-md mb5">Photography</h3>
                             <p class="h5-sm">Her companions instrument set
@@ -100,7 +100,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card">
-                        <div class="card-image bgC1"><i class="fas fa-swatchbook"></i></div>
+                        <div class="card-image bgC1">
+                            <div class="fontaw"> <i class="fas fa-fingerprint"></i> </div>
+                        </div>
                         <div class="card-body text-center">
                             <h3 class="h3-md mb5">Branding</h3>
                             <p class="h5-sm">Her companions instrument set
@@ -109,7 +111,83 @@
                         <div class="card-link pb-4"> <a href="#" class="card-a">... DISCOVER MORE</a> </div>
                     </div>
                 </div>
+                <div class="col-md-12 col-12 py-5">
+                    <p class="get-in">Top quality services executed by our devoted, yet
+                        <br>creative team. Nothing less than creative. </p> <a href="#" class="btn btn-ghost-black"> LET'S GET IN TOUCH</a> </div>
             </div>
+        </div>
+    </section>
+    <section class="container-fluid pt-5">
+        <div class="row text-center no-gutters pt-5">
+            <div class="col-12 py-4">
+                <div class="section-heading">
+                    <h2 class="gellery-title">Gallery</h2>
+                    <p class="sub-heading">OUR WORK</p>
+                </div>
+            </div>
+            <div class="col-12 py-4">
+                <ul>
+                    <li class="d-inline px-3 port-menu">SHOW ALL</li>
+                    <li class="d-inline px-3 port-menu"> DESIGN</li>
+                    <li class="d-inline px-3 port-menu">BRANDING</li>
+                    <li class="d-inline px-3 port-menu">VIDEO</li>
+                    <li class="d-inline px-3 port-menu">PHOTO</li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Logo Design</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">DESIGN</h5> </div>
+                    </div>
+                </div> <img src="images/1.jpg" class="w-100" alt=""> </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Happy Face</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">PHOTO</h5> </div>
+                    </div>
+                </div> <img src="images/2.jpg" class="w-100" alt=""> </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Can</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">BRANDING</h5> </div>
+                    </div>
+                </div> <img src="images/3.jpg" class="w-100" alt=""> </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Leaves</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">VIDEO</h5> </div>
+                    </div>
+                </div> <img src="images/4.jpg" class="w-100" alt=""> </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Label</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">BRANDING</h5> </div>
+                    </div>
+                </div> <img src="images/5.jpg" class="w-100" alt=""> </div>
+            <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
+                <div class="item-caption">
+                    <div class="item-desc">
+                        <div class="desc-title">
+                            <h3 class="h3-md">Mockup</h3></div>
+                        <div class="caption-btn">
+                            <h5 class="subheading">PHOTO</h5> </div>
+                    </div>
+                </div> <img src="images/6.jpg" class="w-100" alt=""> </div>
         </div>
     </section>
 </body>
