--- a/index.html
+++ b/index.html
@@ -142,70 +142,97 @@
         </div>
         <div class="row text-center no-gutters " id="lightgallery">
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2 ">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Logo Design</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">DESIGN</h5> </div>
-                    </div>
-                </div>
-                <a href="images/1.jpg"> <img src="images/1.jpg" class="w-100" alt=""></a>
+                <a href="images/1.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Logo Design</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">DESIGN</h5> </div>
+                        </div>
+                    </div> <img src="images/1.jpg" class="w-100" alt=""> </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Happy Face</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">PHOTO</h5> </div>
-                    </div>
-                </div>
-                <a href="images/2.jpg"> <img src="images/2.jpg" class="w-100" alt=""></a>
+                <a href="images/2.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Happy Face</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">PHOTO</h5> </div>
+                        </div>
+                    </div> <img src="images/2.jpg" class="w-100" alt=""></a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Can</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">BRANDING</h5> </div>
-                    </div>
-                </div>
-                <a href="images/3.jpg"> <img src="images/3.jpg" class="w-100" alt=""></a>
+                <a href="images/3.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Can</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">BRANDING</h5> </div>
+                        </div>
+                    </div> <img src="images/3.jpg" class="w-100" alt=""></a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Leaves</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">VIDEO</h5> </div>
-                    </div>
-                </div>
-                <a href="images/4.jpg"> <img src="images/4.jpg" class="w-100" alt=""></a>
+                <a href="images/4.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Leaves</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">VIDEO</h5> </div>
+                        </div>
+                    </div> <img src="images/4.jpg" class="w-100" alt=""></a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Label</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">BRANDING</h5> </div>
-                    </div>
-                </div>
-                <a href="images/5.jpg"> <img src="images/5.jpg" class="w-100" alt=""> </a>
+                <a href="images/5.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Label</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">BRANDING</h5> </div>
+                        </div>
+                    </div> <img src="images/5.jpg" class="w-100" alt=""> </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
-                <div class="item-caption">
-                    <div class="item-desc">
-                        <div class="desc-title">
-                            <h3 class="h3-md">Mockup</h3> </div>
-                        <div class="caption-btn">
-                            <h5 class="subheading">PHOTO</h5> </div>
+                <a href="images/6.jpg">
+                    <div class="item-caption">
+                        <div class="item-desc">
+                            <div class="desc-title">
+                                <h3 class="h3-md">Mockup</h3> </div>
+                            <div class="caption-btn">
+                                <h5 class="subheading">PHOTO</h5> </div>
+                        </div>
+                    </div> <img src="images/6.jpg" class="w-100" /></a>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid py-5 bgcol">
+        <div class="container py-5">
+            <div class="row no-gutters">
+                <div class="col-lg-4 col-md-12 p-md-2">
+                    <div class="icon float-left"> <i class="far fa-lightbulb"></i> </div>
+                    <div class="icon-desc text-left ">
+                        <h5>WE'RE CREATIVE</h5>
+                        <p>Day handsome addition horrible sensible goodness two contempt. Evening for married summies imperia </p>
                     </div>
                 </div>
-                <a href="images/6.jpg"> <img src="images/6.jpg" class="w-100" /></a>
+                <div class="col-lg-4 col-md-12 p-md-2">
+                    <div class="icon float-left"> <i class="fas fa-user-tie"></i></div>
+                    <div class="icon-desc text-left  ">
+                        <h5>WE'RE ECCENTRICS</h5>
+                        <p>Day handsome addition horrible sensible goodness two contempt. Evening for married summies imperia </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 p-md-2">
+                    <div class="icon float-left"><i class="fas fa-medal"></i></div>
+                    <div class="icon-desc text-left ">
+                        <h5>WE'RE AWARDED</h5>
+                        <p>Day handsome addition horrible sensible goodness two contempt. Evening for married summies imperia </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
