--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
             </div>
         </div>
     </section>
+    <section class="container-fluid">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h5>THE CREW</h5>
+                    <h2>Team</h2> </div>
+                <div class="col-lg-4 col-md-6 col-12"></div>
+                <div class="col-lg-4 col-md-6 col-12"></div>
+                <div class="col-lg-4 col-md-6 col-12"></div>
+            </div>
+        </div>
+    </section>
     <!-- jQuery version must be >= 1.8.0; -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional) -->
